
  \subsection{NEW FEATURES}{
    \itemize{
      \item \samp{www.omegahat.net} is no longer one of the repositories
      known to \code{setRepositories()}.   (Nowadays it only provides
      source packages and is often unavailable.)

      \item \code{package_dependencies()} (in package \pkg{tools}) can
      now use different dependency types for direct and recursive
      dependencies.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item Function \code{plclust()} from the package \pkg{stats}, and
      \code{package.dependencies()}, \code{pkgDepends()},
      \code{getDepList()}, \code{installFoundDepends()}, and
      \code{vignetteDepends()} from \pkg{tools} are defunct.

      \item Defunct functions \code{checkNEWS()} and \code{readNEWS()} from
      package \pkg{tools} and \code{CRAN.packages()} from \pkg{utils} have
      been removed.

      \item \command{R CMD config CXXCPP} is defunct (it was deprecated
      in @R{} 3.6.2).
    }
  }

  %% \subsection{BUG FIXES}{
  %%   \itemize{
  %%   }
  %% }
}

\section{\Rlogo CHANGES IN 4.0.0 patched}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{paste()} and \code{paste0()} gain a new optional
      argument \code{recycle0}.  When set to true, zero-length
      arguments (and all zero-length or no arguments when \code{collapse}
      is not \code{NULL}) lead to the zero-length value
      \code{character(0)}.

      This should not be used in package code until \R 4.0.1 is
      released, when the package should depend on \samp{R (>= 4.0.1)}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{aov(frml, ...)} now also works in case the \code{formula}
      deparses to more than 500 characters, thanks to a report and patch
      proposal by Jan Hauffa.

      \item Fix a dozen places (code, examples) as \code{Sys.setlocale()}
      returns the new rather than the previous setting.

      \item Fix for adding two complex \pkg{grid} units via \code{sum()}.